[feat] use scoped package & add LICENSE

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chainlink-data-streams",
+  "name": "@nekogawa/chainlink-data-streams",
   "version": "1.0.0",
   "description": "ChainLink DataStream SDK Unofficial Typescript client",
   "main": "index.ts",
